<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.ensipoly.events.activities.EventActivity">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="10dp"
        android:weightSum="1">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_place_wrapper"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_place"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_starting_date_wrapper"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_starting_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/create_event_begin"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_ending_date_wrapper"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_ending_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/create_event_end"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_info_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_event_info"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/create_event_create_button"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:text="@string/create_event_create_button" />

    </LinearLayout>

</FrameLayout>
